plugins {
    id 'java-library'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

group = 'by.jenka.rss'
version = ''

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    implementation libs.aws.lambda.core
    implementation libs.aws.lambda.events
    implementation libs.aws.dynamodb
    implementation libs.aws.dynamodb.enhanced
    implementation libs.aws.dynamodb.local

    implementation libs.jackson.jr

    compileOnly libs.lombok
    annotationProcessor libs.lombok

    testCompileOnly libs.lombok
    testAnnotationProcessor libs.lombok

//    runtimeOnly libs.aws.lambda.log
//     Test
    testImplementation libs.aws.lambda.test

    testImplementation platform('org.junit:junit-bom:5.10.2')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'org.mockito:mockito-core:2.1.0'
    testImplementation 'com.jayway.jsonpath:json-path:2.9.0'
}

test {
    jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED'
    useJUnitPlatform()
}

shadowJar {
    archiveVersion = ''
    archiveBaseName = 'lambda'
}

build.dependsOn shadowJar